# nnc-py

./: .gitignore  .gitmodules  README.md  ROADMAP.md  pyproject.toml
benchmarks/: __init__.py  cases.py  compare.py  harness.py  metrics.py  runner_gen.py
docs/: MEMORY_ALLOCATION.md  OPTIMIZATION_PASSES.md  OVERFLOW_DESIGN.md  dominator-fusion.md  pattern_matching_guide.md
docs/plans/: 2025-02-10-dead-code-and-identity-elimination-passes.md  2025-02-10-floating-point-accumulation-fix.md  2026-01-24-fix-c-code-output-debug.md  2026-01-24-tdd-refactoring-plan.md  2026-02-10-cli-tests.md  2026-02-10-operator-fusion-pass.md  2026-02-10-x86-fused-operator-support.md  2026-02-12-c-emitter-coverage.md  2026-02-12-dominator-fusion.md  2026-02-12-pattern-fusion.md  2026-02-12-transformer-fusion-patterns.md
docs/superpowers/plans/: 2026-03-19-o3-generated-c-benchmark.md  2026-03-19-p0-consistency-cleanup.md  2026-03-20-cost-aware-memory-planner.md  2026-03-23-fast-memory-compaction.md  2026-03-24-tiled-lowering-and-blocked-layout.md  2026-03-25-heterogeneous-pipeline-scheduler.md  2026-03-25-scheduled-o3-native-spill.md  2026-03-26-scheduled-residual-tile-streaming.md  2026-03-27-x86-codegen-ir-refactor.md  2026-03-31-external-joint-tiling-schedule-contract.md  2026-04-01-external-joint-solver-submodule.md  2026-04-01-joint-sram-offset-implementation.md
docs/superpowers/specs/: 2026-03-19-o3-generated-c-benchmark-design.md  2026-03-20-cost-aware-memory-planner-design.md  2026-03-23-fast-memory-compaction-design.md  2026-03-23-tiled-lowering-and-blocked-layout-design.md  2026-03-25-heterogeneous-pipeline-scheduler-design.md  2026-03-25-scheduled-o3-native-spill-design.md  2026-03-26-scheduled-residual-tile-streaming-design.md  2026-03-27-x86-codegen-ir-design.md  2026-03-31-external-joint-tiling-schedule-design.md  2026-04-01-joint-sram-offset-design.md
models/: README.md
runtime/include/: nnc_ops.h  nnc_runtime.h  nnc_types.h
runtime/x86/: costmodel.c  ops.c
src/nnc_py/: __init__.py  cli.py  compiler.py  config.py
src/nnc_py/codegen/: __init__.py  _test_runner_gen.py  base.py  c_emitter.py  npu_backend.py  x86_backend.py  x86_ir.py
src/nnc_py/cost_model/: __init__.py  base.py  cli.py  simple.py
src/nnc_py/frontend/: __init__.py  onnx_loader.py
src/nnc_py/ir/: __init__.py  context.py  execution_plan.py  graph.py  joint_tiling_schedule.py  node.py  op_pattern.py  pipeline_schedule.py  split_rules.py  tensor.py  types.py
src/nnc_py/joint_schedule/: __init__.py  materialize.py  recipes.py  regions.py  solver.py  validation.py
src/nnc_py/passes/: __init__.py  base.py  constant_folding.py  dead_code_elimination.py  dominator_fusion.py  dominator_tree.py  fusion_groups.py  fusion_groups_enhanced.py  identity_elimination.py  indexed_forward_graph.py  joint_schedule_memory_import.py  joint_tiling_schedule.py  layout_planning.py  liveness.py  memory_plan.py  memory_planning.py  memory_planning_v4.py  memory_strategy.py  operator_fusion.py  path_validator.py  pattern_fusion.py  pipeline_scheduling.py  pipeline_step_lowering.py  prepack_lowering.py  schedule_analysis.py  scheduled_memory_expansion.py  scheduled_memory_planning.py  spill.py  split_analysis.py  split_transform.py  tiled_lowering.py  unified_memory.py
src/nnc_py/pattern/: __init__.py  base.py  fusion_patterns.py  matcher.py  patterns.py  registry.py
src/nnc_py/scheduler/: __init__.py  base.py  list_scheduler.py
src/nnc_py/tools/: __init__.py  debug_compare.py  (+1 more)
tests/: conftest.py  fake_joint_solver.py  joint_solver_helpers.py  test_and.py  test_benchmark_cases.py  test_benchmark_compare.py  test_benchmark_harness.py  test_benchmark_metrics.py  test_benchmark_runner_gen.py  test_builtin_fusion_patterns.py  test_c_emitter_coverage.py  test_cascade_split.py  test_cli.py  test_clip_optional.py  test_codegen_pipeline_schedule.py  test_codegen_tiled_layout.py  test_codegen_types.py  test_common.py  test_compaction.py  test_complex_e2e.py  test_constant.py  test_constant_folding.py  test_consumer_rewiring.py  test_conv_split_rule.py  test_cost_aware_allocator.py  test_cost_model.py  test_costmodel_runtime.py  test_dead_code_elimination_pass.py  test_debug_mode.py  test_dominator_fusion_codegen.py  test_dominator_fusion_pass.py  test_dominator_tree.py  test_e2e.py  test_elementwise_split_rule.py  test_equal.py  test_execution_plan_ir.py  test_fusion_groups.py  test_identity.py  test_identity_elimination_pass.py  test_indexed_forward_graph.py  (+83 more)
tests/__snapshots__/: test_snapshots.ambr  test_snapshots_lenet5.ambr  test_snapshots_operator_coverage.ambr  test_snapshots_operator_coverage_large.ambr  test_snapshots_resnet18.ambr  test_snapshots_simple_cnn.ambr  test_snapshots_simple_conv.ambr  test_snapshots_simple_lstm.ambr  test_snapshots_simple_mlp.ambr  test_snapshots_simple_transformer.ambr  test_snapshots_vgg19.ambr
tests/integration/: __init__.py  test_dominator_fusion_end_to_end.py
tests/models/: operator_coverage_large.onnx
tools/: dump_classic_models.py  export_joint_problem.py
(+24 files in other folders)
