[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnc-py"
version = "0.1.0"
description = "Neural Network Compiler - ONNX to C with pseudo-instruction acceleration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["onnx", "compiler", "neural-network", "edge-inference", "embedded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "onnx>=1.16.0,<1.18",
    "onnxsim>=0.4.0",
    "onnxruntime>=1.20.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "torch>=2.10.0",
]

# Build configuration for onnxsim
# Note: onnxsim requires CMake policy setting for CMake 4.x
# Install with: CMAKE_ARGS="-DCMAKE_POLICY_VERSION_MINIMUM=3.5" uv pip install onnxsim

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
nnc = "nnc_py.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/nnc-py"
Documentation = "https://github.com/yourusername/nnc-py#readme"
Repository = "https://github.com/yourusername/nnc-py"
Issues = "https://github.com/yourusername/nnc-py/issues"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "syrupy>=4.0.0",
]

# Syrupy snapshot testing configuration
[tool.syrupy]
snapshots_path = "tests/__snapshots__"
snapshot_extension = "ambr"
snapshot_single_file = false
